<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Travel Journal</string>
    <string name="home">Home</string>
    <string name="board">Board</string>
    <string name="profile">Profile</string>
    <string name="back_arrow">Back</string>
    <string name="search">Search</string>
    <string name="home_title">Hey!\nWhat are\nyour plans?</string>
    <string name="home_camp">camp</string>
    <string name="home_explore_item_travel_image">Travel Image</string>
    <string name="home_explore_title">EXPLORE THE WORLD</string>
    <string name="home_explore_more">EXPLORE MORE</string>
    <string name="home_plan_to_visit">EXPLORE MAP\nAND\nPLAN TO VISIT</string>
    <string name="home_search_friends">SEARCH\nFRIENDS</string>
    <string name="home_search_travels">SEARCH\nTRAVELS</string>
    <string name="search_friends_title">Search Friends</string>
    <string name="search_friends_no_results">Oops, no results found.</string>
    <string name="board_title">Welcome on board!</string>
    <string name="board_desc">Start a new Journey</string>
    <string name="board_airplane">AIRPLANE</string>
    <string name="board_packing_ist">Packing List</string>
    <string name="board_travel_weather_icon">WEATHER</string>
    <string name="board_travel_grid_card_notes">NOTES</string>
    <string name="board_travel_grid_card_photos">PHOTOS</string>
    <string name="board_travel_grid_card_places">PLACES</string>
    <string name="board_travel_grid_card_details">DETAILS</string>
    <string name="board_travel_grid_card_budget">BUDGET</string>
    <string name="board_travel_grid_card_explore">EXPLORE</string>
    <string name="explore_title">Explore</string>
    <string name="explore_nearby_places">Explore nearby places</string>
    <string name="details_title">Details</string>
    <string name="details_travel_image">Travel image</string>
    <string name="details_detination_title">Destination</string>
    <string name="details_departure_title">Departure</string>
    <string name="details_arrival_title">Arrival</string>
    <string name="details_budget_title">Budget</string>
    <string name="details_accommodation_title">Accommodation</string>
    <string name="details_accommodation_transport_contact_title">Contact</string>
    <string name="details_accommodation_transport_file_title">File</string>
    <string name="details_accommodation_transport_download_file"><u>Download file</u></string>
    <string name="details_transport_title">Transport</string>
    <string name="details_see_all_tags"><u>+ See all tags</u></string>
    <string name="details_see_less_tags"><u>- See less tags</u></string>
    <string name="details_edit_minor_details">Edit minor details</string>
    <string name="details_end_travel">End travel</string>
    <string name="dialog_edit_travel_details_title">Edit minor travel details</string>
    <string name="dialog_edit_travel_details_desc">It\'s still possible to edit travel details that
    are merely identification, social aspect</string>
    <string name="dialog_edit_travel_details_name_title">NAME</string>
    <string name="dialog_edit_travel_details_name_hint">Awesome 3 days trip in Mediolan</string>
    <string name="dialog_edit_travel_details_image_title">IMAGE</string>
    <string name="dialog_edit_travel_details_image_file_remove_button">Remove image</string>
    <string name="dialog_edit_travel_details_tags_title">TAGS</string>
    <string name="dialog_edit_travel_details_tags_hint">Beach, europe, culture, landscape…</string>
    <string name="budget_title">Manage budget</string>
    <string name="budget_expenses_no_results">No expenses found.\nAdd a new one by click +</string>
    <string name="dialog_expense_remove_title">Remove expense</string>
    <string name="dialog_expense_remove_desc">Are you sure you want to remove this expense?</string>
    <string name="dialog_add_expense_title">Add expense</string>
    <string name="dialog_add_expense_desc">Choose or create a category, enter amount and
        choose if it\'s income or expenditure</string>
    <string name="dialog_add_expense_category">Category</string>
    <string name="dialog_add_expense_default_amount">0.0</string>
    <string name="notes_title">Notes</string>
    <string name="notes_no_results">No notes found.\nAdd a new one by click +</string>
    <string name="dialog_notes_options_title">Options</string>
    <string name="dialog_notes_options_edit">Edit</string>
    <string name="dialog_notes_options_remove">Remove</string>
    <string name="dialog_add_note_title">Add note</string>
    <string name="dialog_add_note_desc">It can both a journal page and a daily diary,
    quick note.\nWhatever you think of!</string>
    <string name="dialog_remove_note_title">Remove note</string>
    <string name="dialog_remove_note_desc">Are you sure you want to remove this note?</string>
    <string name="dialog_edit_note_title">Edit note</string>
    <string name="dialog_edit_note_desc">It can be both a journal page and a daily diary,
    quick note.\nWhatever you think of!</string>
    <string name="photos_title">Photos</string>
    <string name="photos_no_results">No photos found.\nAdd a new one by click +</string>
    <string name="photo">Photo</string>
    <string name="dialog_add_photo_title">Add photo</string>
    <string name="dialog_add_photo_desc">Add photo from your journey.\nIt\'s <b>optional</b>, but you
        can describe the photo, what\'s in it or how you spent the day</string>
    <string name="dialog_add_note_photo">Add photo</string>
    <string name="dialog_edit_photo_title">Edit photo note</string>
    <string name="dialog_edit_photo_desc">It\'s still possible to edit photo note. You can also leave
    it empty - note is <b>optional</b></string>
    <string name="dialog_remove_photo_title">Remove photo</string>
    <string name="dialog_remove_photo_desc">Are you sure you want to remove this photo?</string>
    <string name="places_title">Visited places</string>
    <string name="places_no_results">No places found.\nAdd a new one by click +</string>
    <string name="dialog_add_place_title">Add place</string>
    <string name="dialog_add_place_desc">Search and add visited place.\nRate and <b>optionally</b>
        describe it - what did you see, how was the place or anything what you want</string>
    <string name="dialog_add_note_place_emoji_happy">EMOJI HAPPY</string>
    <string name="dialog_add_note_place_emoji_normal">EMOJI NORMAL</string>
    <string name="dialog_add_note_place_emoji_sad">EMOJI SAD</string>
    <string name="dialog_add_note_place_emoji_lucky">EMOJI LUCKY</string>
    <string name="dialog_add_note_place_emoji_shocked">EMOJI SHOCKED</string>
    <string name="dialog_add_note_place_emoji_bored">EMOJI BORED</string>
    <string name="dialog_remove_place_title">Remove place</string>
    <string name="dialog_remove_place_desc">Are you sure you want to remove this place?</string>
    <string name="dialog_edit_place_title">Edit place note</string>
    <string name="dialog_edit_place_desc">It\'s still possible to edit place note. You can also leave
    it empty - note is <b>optional</b></string>
    <string name="map_title">Map</string>
    <string name="map_show_saved_places">Show saved places</string>
    <string name="map_nearby_places">Nearby places</string>
    <string name="map_hide_saved_places">Hide saved places</string>
    <string name="weather_title">Weather</string>
    <string name="weather_current_weather_today">TODAY</string>
    <string name="weather_current_weather_icon">WEATHER</string>
    <string name="weather_celsius_degrees">°C</string>
    <string name="weather_fahrenheit_degrees">°F</string>
    <string name="weather_city_name">City name</string>
    <string name="weather_search_city">Search city</string>
    <string name="alarm_title">Alarm</string>
    <string name="alarm_channel_info">Alarm channel</string>
    <string name="dialog_alarm_perms_title">Additional Permissions</string>
    <string name="dialog_alarm_perms_desc">
        To fully use the alarm function, enable additional rights in the settings.
    </string>
    <string name="dialog_alarm_title">Set alarm</string>
    <string name="dialog_alarm_date">DATE</string>
    <string name="dialog_alarm_time">TIME</string>
    <string name="dialog_alarm_note">NOTE</string>
    <string name="alarm_no_alarms">No alarms set</string>
    <string name="alarm_set_new_alarm">Set new alarm</string>
    <string name="dialog_alarm_cancel_alarm">Cancel Alarm</string>
    <string name="translator_title">Translator</string>
    <string name="translator_swap">SWAP LANGUAGES</string>
    <string name="translator_type_text_to_translate">Type text to translate</string>
    <string name="translator_translate">Translate</string>
    <string name="translator_translation">Translation</string>
    <string name="currency_title">Currency\nconverter</string>
    <string name="currency_amount_title">Amount</string>
    <string name="currency_from">From</string>
    <string name="currency_to">To</string>
    <string name="currency_convert">Convert</string>
    <string name="currency_swap">SWAP CURRENCY</string>
    <string name="currency_result_title">Result</string>
    <string name="currency_default_amount">0.0</string>
    <string name="login_title">Start\nyour\nadventure</string>
    <string name="login_email">EMAIL</string>
    <string name="login_password">PASSWORD</string>
    <string name="login_log_in">Log In</string>
    <string name="login_image">Rocket</string>
    <string name="login_OR_separator">OR</string>
    <string name="login_forgot_password"><u>Forgot your password?</u></string>
    <string name="login_no_acc_question">Don\'t have an account?</string>
    <string name="login_no_acc_sign_up"><u>Sign up</u></string>
    <string name="forgot_password_title">Forgot\nyour\npassword?</string>
    <string name="forgot_password_info">
        Don\'t worry! It\'s sometimes happens.
        Just fill your email and we\'ll help you to reset your password.
    </string>
    <string name="forgot_password_image">Suitcase</string>
    <string name="forgot_password_back"><u>Back to Login</u></string>
    <string name="dialog_update_account_title">Welcome on Board, Traveller!</string>
    <string name="dialog_update_account_desc">
        Now you can start your own adventure!\n
        &#127759; &#x2764; &#x270b;\nOops, but wait…\nIt looks like that your traveller\'s
        account is still unfilled… &#x1f61e;\nWhen do you want to update it?
    </string>
    <string name="dialog_nearby_places_title">Type of places</string>
    <string name="dialog_nearby_places_desc">Select what type of places you are looking for</string>
    <string name="dialog_button_now">NOW</string>
    <string name="dialog_button_later">LATER</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="dialog_button_add">ADD</string>
    <string name="dialog_button_clear">CLEAR</string>
    <string name="dialog_button_apply">APPLY</string>
    <string name="dialog_button_reset">RESET</string>
    <string name="dialog_rate_day_title">Rate day</string>
    <string name="dialog_rate_day_desc">How was your day, how did you enjoy it?</string>
    <string name="dialog_rate_day_emoji_happy">EMOJI HAPPY</string>
    <string name="dialog_rate_day_emoji_normal">EMOJI NORMAL</string>
    <string name="dialog_rate_day_emoji_sad">EMOJI SAD</string>
    <string name="dialog_rate_day_emoji_lucky">EMOJI LUCKY</string>
    <string name="dialog_rate_day_emoji_shock">EMOJI SHOCK</string>
    <string name="dialog_rate_day_emoji_bored">EMOJI BORED</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dialog_filter_travels_title">Filter travels</string>
    <string name="dialog_filter_travels_desc">Choose filters to narrow search results.</string>
</resources>