<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/dialog_rate_day_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/dialog_rate_day_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"/>

    <TextView
        android:id="@+id/dialog_rate_day_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_rate_day_title"
        android:fontFamily="@font/raleway_regular"
        android:textAlignment="textStart"
        android:text="@string/dialog_rate_day_desc"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/gray"/>

    <LinearLayout
        android:id="@+id/dialog_rate_day_emoji_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_rate_day_desc"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dialog_rate_day_emoji_happy"
                android:layout_width="@dimen/regular_image"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_smaller"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_emoji_happy"
                android:contentDescription="@string/dialog_rate_day_emoji_happy"/>

            <ImageView
                android:id="@+id/dialog_rate_day_emoji_normal"
                android:layout_width="@dimen/regular_image"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_smaller"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_emoji_normal"
                android:contentDescription="@string/dialog_rate_day_emoji_normal"/>

            <ImageView
                android:id="@+id/dialog_rate_day_emoji_sad"
                android:layout_width="@dimen/regular_image"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_smaller"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_emoji_sad"
                android:contentDescription="@string/dialog_rate_day_emoji_sad"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/dialog_rate_day_emoji_lucky"
                android:layout_width="@dimen/regular_image"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_smaller"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_emoji_lucky"
                android:contentDescription="@string/dialog_rate_day_emoji_lucky"/>

            <ImageView
                android:id="@+id/dialog_rate_day_emoji_shocked"
                android:layout_width="@dimen/regular_image"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_smaller"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_emoji_shocked"
                android:contentDescription="@string/dialog_rate_day_emoji_shock"/>

            <ImageView
                android:id="@+id/dialog_rate_day_emoji_bored"
                android:layout_width="@dimen/regular_image"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_smaller"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_emoji_bored"
                android:contentDescription="@string/dialog_rate_day_emoji_bored"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_rate_day_button_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_rate_day_emoji_container"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:text="@string/dialog_button_ok"
        android:textColor="@color/main_yellow"
        app:rippleColor="@color/yellow_bg_light"
        android:fontFamily="@font/raleway_bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_rate_day_button_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/dialog_rate_day_button_positive"
        app:layout_constraintTop_toBottomOf="@+id/dialog_rate_day_emoji_container"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/dialog_button_cancel"
        android:textColor="@color/main_yellow"
        app:rippleColor="@color/yellow_bg_light"
        android:fontFamily="@font/raleway_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>