<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/dialog_update_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/dialog_update_account_title"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="@dimen/text_medium"/>

    <TextView
        android:id="@+id/dialog_update_profile_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_update_profile_title"
        android:fontFamily="@font/raleway_regular"
        android:textAlignment="center"
        android:text="@string/dialog_update_account_desc"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/dark_gray"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_update_profile_now_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_update_profile_desc"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:text="@string/dialog_button_now"
        android:fontFamily="@font/raleway_bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_update_profile_later_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small"
        app:layout_constraintEnd_toStartOf="@+id/dialog_update_profile_now_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_update_profile_desc"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:text="@string/dialog_button_later"
        android:fontFamily="@font/raleway_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>