<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/dialog_filter_travels_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/dialog_filter_travels_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"/>

    <TextView
        android:id="@+id/dialog_filter_travels_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/padding_small"
        android:fontFamily="@font/raleway_regular"
        android:textAlignment="textStart"
        android:text="@string/dialog_filter_travels_desc"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/gray"/>

    <ScrollView
        android:id="@+id/dialog_add_note_content_container"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/padding_smaller"
        android:paddingHorizontal="@dimen/padding_smaller"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        </LinearLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_filter_travels_clear_button"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/RedTextButton"
            app:rippleColor="@color/red_bg_lighter"
            android:text="@string/dialog_button_reset"
            android:fontFamily="@font/raleway_bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_filter_travels_apply_button"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/RedTextButton"
            app:rippleColor="@color/red_bg_lighter"
            android:text="@string/dialog_button_apply"
            android:fontFamily="@font/raleway_bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_filter_travels_cancel_button"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/dialog_filter_travels_apply_button"
            app:layout_constraintStart_toEndOf="@+id/dialog_filter_travels_clear_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/RedTextButton"
            app:rippleColor="@color/red_bg_lighter"
            android:text="@string/dialog_button_cancel"
            android:fontFamily="@font/raleway_bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>