<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/dialog_nearby_places_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/dialog_nearby_places_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium"/>

    <TextView
        android:id="@+id/dialog_nearby_places_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nearby_places_title"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/dialog_nearby_places_desc"
        android:textAlignment="textStart"
        android:textSize="@dimen/text_regular"
        android:textColor="@color/gray"/>

    <ListView
        android:id="@+id/dialog_nearby_places_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_list_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nearby_places_desc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_tiny"
        android:choiceMode="singleChoice"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_nearby_places_clear_button"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nearby_places_list"
        android:layout_marginTop="@dimen/margin_tiny"
        style="@style/YellowTextButton"
        app:rippleColor="@color/red_bg_lighter"
        android:textColor="@color/main_red"
        android:text="@string/dialog_button_clear"
        android:fontFamily="@font/raleway_bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_nearby_places_search_button"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nearby_places_list"
        android:layout_marginTop="@dimen/margin_tiny"
        style="@style/YellowTextButton"
        app:rippleColor="@color/red_bg_lighter"
        android:textColor="@color/main_red"
        android:text="@string/dialog_button_ok"
        android:fontFamily="@font/raleway_bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_nearby_places_cancel_button"
        android:layout_width="@dimen/dialog_button_width"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/dialog_nearby_places_search_button"
        app:layout_constraintStart_toEndOf="@+id/dialog_nearby_places_clear_button"
        app:layout_constraintTop_toBottomOf="@+id/dialog_nearby_places_list"
        android:layout_marginTop="@dimen/margin_tiny"
        style="@style/YellowTextButton"
        app:rippleColor="@color/red_bg_lighter"
        android:textColor="@color/main_red"
        android:text="@string/dialog_button_cancel"
        android:fontFamily="@font/raleway_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>